Item.mapFromItem() crashes with Items not created by the engine.

Item.mapFromItem() and Item.mapToItem() get the script engine from
the item they are called on.  Safer to use the script value passed
to the function to determine the engine being used.

Task-number: QTBUG-26280
Change-Id: Id9d6c952cc91c7799910b29a27e24945d8ba073b
Reviewed-by: Andrew den Exter <andrew.den-exter@nokia.com>